--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ body {
         <h2>مصدر زيبرا</h2>
         <p>اضف الـ زيبرا </p>
         <p>  Add The Zebra</p>        
-        <button class="zebra-button" onclick="window.location.href='zbra://sources/add/https://0sop.github.io/'">أضف زيبرا</button>
+        <button class="zebra-button" onclick="window.location.href='zbra://sources/add/http://sagorepo.catway.org/'">أضف زيبرا</button>
     </div>
 </div>
 
@@ -221,7 +221,7 @@ body {
             <h2>مصدر سيلو</h2>
             <p>اضف الـ سيلو</p>
         <p>  Add The Sileo</p>                    
-        <button class="zebra-button" onclick="window.location.href='sileo://source/https://0sop.github.io/'">أضف سيلو</button>
+        <button class="zebra-button" onclick="window.location.href='sileo://source/http://sagorepo.catway.org/'">أضف سيلو</button>
         </div>
     </div>
 
