--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ body {
     </div>
 
     <div class="repo">
-        <img src="assets/images/iPA964.jpeg" alt="Sileo Icon">
+        <img src="sago.jpeg" alt="Sileo Icon">
         <div class="repo-content">
             <h2>iPA متجري لتطبيقات </h2>
         <p>  my store for apps</p>                    
